fixed gap

--- a/src/scss/_characters.scss
+++ b/src/scss/_characters.scss
@@ -80,6 +80,5 @@
 @media only screen and (max-width: 768px) {
   .character-and-add {
     grid-template-columns: 1fr;
-    gap: 0;
   }
 }
